added dal layer still working on the functions

--- a/DnD_Between.wpf/DnD_Between.wpf.csproj
+++ b/DnD_Between.wpf/DnD_Between.wpf.csproj
@@ -13,6 +13,10 @@
   </ItemGroup>
 
   <ItemGroup>
+    <ProjectReference Include="..\DAL_DnD_Between\DAL_DnD_Between.csproj" />
+  </ItemGroup>
+
+  <ItemGroup>
     <Compile Update="DataSet1.Designer.cs">
       <DesignTime>True</DesignTime>
       <AutoGen>True</AutoGen>
