--- a/DAL_DnD_Between/DAL_DnD_Between.csproj
+++ b/DAL_DnD_Between/DAL_DnD_Between.csproj
@@ -78,13 +78,13 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
-    <Compile Include="CharacterDTO.cs" />
-    <Compile Include="Character_Context.cs" />
-    <Compile Include="ClassDTO.cs" />
-    <Compile Include="Class_Context.cs" />
+    <Compile Include="DTO\CharacterDTO.cs" />
+    <Compile Include="Context\Character_Context.cs" />
+    <Compile Include="DTO\ClassDTO.cs" />
+    <Compile Include="Context\Class_Context.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
-    <Compile Include="RaceDTO.cs" />
-    <Compile Include="Race_Context.cs" />
+    <Compile Include="DTO\RaceDTO.cs" />
+    <Compile Include="Context\Race_Context.cs" />
   </ItemGroup>
   <ItemGroup>
     <None Include="app.config" />
